--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,14 @@
 {
-  "name": "healthy-gulp-angular",
-  "version": "0.0.0",
-  "authors": "",
+  "name": "mundi-book-project",
+  "version": "1.0.0",
+  "authors": "Jean Gonçalves <jeanfpgoncalves@live.com>",
   "private": true,
   "dependencies": {
     "angular": "^1.6.0",
     "angular-ui-router": "^0.3.2",
-    "angular-animate": "^1.3.0",
-    "foundation": "~5.5.1"
+    "angular-route": "~1.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.23"
-  },
-  "overrides": {
-    "foundation": {
-      "main": "js/foundation.js"
-    }
   }
 }
